--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,25 @@
 	<groupId>com.bayu</groupId>
 	<artifactId>microservices-demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
 	<name>microservices-demo</name>
 	<description>Microservices Demo</description>
+	<modules>
+		<module>customer-services</module>
+	</modules>
+
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 		<java.version>17</java.version>
+		<spring.boot.dependencies.version>3.1.5</spring.boot.dependencies.version>
+		<spring.boot.maven.dependencies.plugin.version>3.1.5</spring.boot.maven.dependencies.plugin.version>
+		<spring-cloud.version>2022.0.4</spring-cloud.version>
+<!--		<micrometer-tracing.version>13.0</micrometer-tracing.version>-->
+		<image>bayu/${project.artifactId}:${project.version}</image>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -47,6 +61,27 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<version>4.0.4</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.github.openfeign/feign-micrometer -->
+		<dependency>
+			<groupId>io.github.openfeign</groupId>
+			<artifactId>feign-micrometer</artifactId>
+			<version>13.0</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
