--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
 	<description>Microservices Demo</description>
 	<modules>
 		<module>customer-services</module>
-	</modules>
+        <module>eureka-server</module>
+    </modules>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
