add setting eureka client

--- a/customer-services/src/main/resources/application.yml
+++ b/customer-services/src/main/resources/application.yml
@@ -9,3 +9,17 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create-drop
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+    show-sql: true
+
+# setting for registry to eureka
+eureka:
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+    enabled: true
