--- a/customer-services/pom.xml
+++ b/customer-services/pom.xml
@@ -41,6 +41,12 @@
             <version>4.0.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.bayu</groupId>
+            <artifactId>fraud-services</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
 </project>
